tests/reference/asr-intrinsics_36-1cb3d03.stderr
semantic error: Value of a save or parameter variable must evaluate to a compile time constant
 --> tests/../integration_tests/intrinsics_36.f90:3:5
  |
3 |     character(len=25) :: empty = adjustl('')
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
